syntax = "proto3";

package mobilegateway.protos;

message PhoneNumber {
    string type = 1;
    string number = 2;
}

message UserProfile {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string locale = 4;
    optional string photo_url = 5;
    string address = 6;
    string city = 7;
    string state = 8;
    string postal_code = 9;
    string country = 10;
    repeated PhoneNumber phones = 11;
    string preferred_name = 12;
}

message GetUserProfileRequest {}
message GetUserProfileResponse {
    UserProfile profile = 1;
}

message SetUserProfileRequest {
    string first_name = 1;
    string last_name = 2;
}
message SetUserProfileResponse {
    UserProfile profile = 1;
}

message UploadUserProfilePhotoRequest {
    string photo_bytes = 1;
}
message UploadUserProfilePhotoResponse {
    string photo_url = 1;
}

message ReferralHistoryApiRequest {}
message ReferralHistoryApiResponse {}

service UserProfileService {
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse) {}
    rpc SetUserProfile(SetUserProfileRequest) returns (SetUserProfileResponse) {}
    rpc UploadUserProfilePhoto(UploadUserProfilePhotoRequest) returns (UploadUserProfilePhotoResponse) {}
    rpc ReferralHistoryApi(ReferralHistoryApiRequest) returns (ReferralHistoryApiResponse) {}
}
